# SolitaryMemeTD

./: .gitignore  Anchor.toml  Bombardino.json  Cargo.toml  README.md  SECURITY.md  Tralala.json  TungSahur.json  anchor-wsl.bat  convert.js  create-nfts.bat  deploy-all-nfts.js  deploy-nft-simpler.js  deploy-nft.js  idl.json  instructions.txt  package-lock.json  package.json  solana-playground-nft.js  start-multiplayer.bat  token.json  update-metadata.js  vercel.json
frontend/: index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/backend/: package-lock.json  package.json  phantom_keypair.js  server.js  tsconfig.json
frontend/src/: App.tsx  anchor-browser.ts  assert.ts  constants.ts  coral-anchor-browser.ts  hooks.ts  index.css  jsx.d.ts  main.tsx  polyfills.ts  react-app-env.d.ts  react-override.d.ts  shims.ts  tsconfig.app.json  vite-env.d.ts
frontend/src/components/: AssertTest.tsx  Game.tsx  Home.tsx  LandingPage.tsx  MultiplayerGame.tsx  MultiplayerLobby.tsx  UpgradeCard.tsx  UpgradeCardExample.tsx  WalletConnection.tsx
frontend/src/libs/: init.ts
frontend/src/polyfills/: assert.js
frontend/src/services/: SocketService.ts
frontend/src/types/: React.d.ts  index.d.ts  jsx.d.ts
frontend/src/utils/: anchor-helpers.ts  getRPC.ts  socketService.ts
programs/breakout/: Cargo.toml
programs/breakout/src/: lib.rs
programs/solitary_meme_td/: Cargo.toml
programs/solitary_meme_td/src/: lib.rs
tests/: breakout.ts
