[package]
name = "solitary_meme_td"
version = "0.1.0"
description = "Solitary Meme Tower Defense - Core Gameplay Demo"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "solitary_meme_td"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
mpl-token-metadata = { version = "3.2.0" }
solana-program = "=1.17.6" 